Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ jobs:
   - job: "Build"
 
     pool:
-      vmImage: "ubuntu-latest"
+      vmImage: "ubuntu-20.04"
 
     variables:
       GOBIN: "$(GOPATH)/bin" # Go binaries path
